Update to Jaav 11, refactoring, optimizations